# elysia-settings-elysiaos

./: AnimatedTile.cpp  AnimatedTile.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Makefile  README.md  Settings.py  build.sh  elysettings  elysettings.desktop  main.cpp  translations.cpp  translations.h
.config/Elysia/assets/: update.py
components/: About.cpp  About.h  AboutManager.cpp  AboutManager.h  AppearanceManager.cpp  AppearanceManager.h  AppearanceManager_new.cpp  Applications.cpp  Applications.h  ApplicationsManager.cpp  ApplicationsManager.h  Battery.cpp  Battery.h  BatteryManager.cpp  BatteryManager.h  Bluetooth.cpp  Bluetooth.h  BluetoothManager.cpp  BluetoothManager.h  Display.cpp  Display.h  DisplayManager.cpp  DisplayManager.h  LanguageManager.cpp  LanguageManager.h  Network.cpp  Network.h  NetworkManager.cpp  NetworkManager.h  NetworkManager_rest.cpp  Power.cpp  Power.h  PowerManager.cpp  PowerManager.h  Sound.cpp  Sound.h  SoundManager.cpp  SoundManager.h  Storage.cpp  Storage.h  (+14 more)
translations/: de_DE.cpp  de_DE.h  en_US.cpp  en_US.h  es_ES.cpp  es_ES.h  fr_FR.cpp  fr_FR.h  id_ID.cpp  id_ID.h  ja_JP.cpp  ja_JP.h  ko_KR.cpp  ko_KR.h  ru_RU.cpp  ru_RU.h  translations.cpp  translations.h  vi_VN.cpp  vi_VN.h  zh_CN.cpp  zh_CN.h
